--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Merriweather:400,700'>
+    <link rel='stylesheet' type='text/css' href='stylin.css'>
     <title>Nolan Nicholson</title>
   </head>
   <body>
     <h1>Nolan Nicholson</h1>
     <p>This is the website so far.</p>
     <p>Gotta start somewhere.</p>
+    <p>A B C D E F G H I J K L M N O P Q R S T U V X Y Z</p>
+    <p>a b c d e f g h i j k l m n o p q r s t u v x y z</p>
   </body>
 </html>
