Tooling around with page and styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Nolan Nicholson</title>
   </head>
   <body>
-    <h1>Nolan Nicholson</h1>
+    <h1 class='name'>Nolan Nicholson</h1>
     <p>This is the website so far.</p>
     <p>Gotta start somewhere.</p>
     <p>A B C D E F G H I J K L M N O P Q R S T U V X Y Z</p>
