--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
+<meta charset = "UTF-8">
+
 <html>
   <head>
-    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Merriweather:400,700'>
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
     <link rel='stylesheet' type='text/css' href='stylin.css'>
     <title>Nolan Nicholson</title>
   </head>
   <body>
-    <h1 class='name'>Nolan Nicholson</h1>
+    <h1 class='name'>
+        Nolan Nicholson
+        <canvas id="headercanvas" width="64" height="64"></canvas>
+    </h1>
+
     <p><a href='https://www.linkedin.com/in/nolann/'>LinkedIn</a> |
       <a href='https://github.com/NolanNicholson/'>GitHub</a>
-    <p>I'm Nolan, a chemical process engineer living in Sacramento, CA.
+    <p>Hello! I'm Nolan, an engineer living in Reno, NV.
       I work for <a href='http://originmaterials.com/'>Origin Materials</a>,
       a chemical R&D and manufacturing startup in West Sacramento.</p>
-    <p>I earned a B.S. in chemical engineering from the University of Nevada,
-      Reno. I had a minor in business administration, and participated in the
-      Entrepreneurship Club and the American Institute of Chemical Engineers.
-    <p>I research and practice computer programming and artificial intelligence
-      as hobbies, and hope to incorporate them more and more into my professional work.</p>
-    <p>I also really enjoy the Chinese and Japanese languages. While a student at UNR,
-      I spent a summer in Suzhou, Jiangsu as a student in the US Department
-      of State's Critical Language Scholarship.</p>
-    <p>There isn't a whole lot of content on this website yet. I'm posting this
-      here mainly so I have an excuse to use this github.io site.
-      Although the Internet has been a thing since well before I was born, it's
-      still absolutely magical to me that you can post something where it's
-      accessible by the whole world, and I'm quite grateful to GitHub for
-      allowing me to do so, free of charge.</p>
+
+    <script src="gl-matrix.js"></script>
+    <script src="script.js"></script>
+
   </body>
 </html>
