--- a/index.html
+++ b/index.html
@@ -10,17 +10,29 @@
   <body>
     <h1 class='name'>
         Nolan Nicholson
+        
+        <!--Code for adding a spinning cube to the header-->
         <canvas id="headercanvas" width="64" height="64"></canvas>
+        <script src="gl-matrix.js"></script>
+        <script src="script.js"></script>
+        <!--end spinning cube code-->
     </h1>
 
     <p><a href='https://www.linkedin.com/in/nolann/'>LinkedIn</a> |
       <a href='https://github.com/NolanNicholson/'>GitHub</a>
-    <p>Hello! I'm Nolan, an engineer living in Reno, NV.
-      I work for <a href='http://originmaterials.com/'>Origin Materials</a>,
-      a chemical R&D and manufacturing startup in West Sacramento.</p>
+      
+    <p>
+    Hello! I'm Nolan, an engineer living in Reno, NV.
+    I work for <a href='http://originmaterials.com/'>Origin Materials</a>,
+    a chemical R&D and manufacturing startup in West Sacramento.
+    </p>
 
-    <script src="gl-matrix.js"></script>
-    <script src="script.js"></script>
+    <p>
+    My hobbies include computer programming, computer graphics,
+    and foreign languages - particularly Chinese and Japanese. I am hoping
+    to add more content to this website soon.
+    </p>
+
 
   </body>
 </html>
