Fixed vertical alignment of cube. Tweaked page text slightly

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
     </p>
 
     <p>
-    My hobbies include computer programming, computer graphics,
-    and foreign languages - particularly Chinese and Japanese. I am hoping
-    to add more content to this website soon.
+    My hobbies include computer programming, computer graphics, reading,
+    and foreign languages - particularly Chinese and Japanese. (English is
+    my first.)
+    </p>
+    
+    <p>
+    I am hoping to add more content to this website soon!
     </p>
 
 
