Reorganized scripts to make future additions easier

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         
         <!--Code for adding a spinning cube to the header-->
         <canvas id="headercanvas" width="64" height="64"></canvas>
-        <script src="gl-matrix.js"></script>
-        <script src="script.js"></script>
+        <script src="scripts/libraries/gl-matrix.js"></script>
+        <script src="scripts/headercube.js"></script>
         <!--end spinning cube code-->
     </h1>
 
