--- a/fullscreen.html
+++ b/fullscreen.html
@@ -20,7 +20,7 @@
 
     <p align="center">
         <br>
-        <canvas id="maincanvas" width="640" height="480" style="object-fit: fill"></canvas>
+        <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
         <script src="scripts/fullscreen.js"></script>
     </p>
 
