--- a/fullscreen.html
+++ b/fullscreen.html
@@ -18,9 +18,14 @@
         <!--end spinning cube code-->
     </h1>
 
+    <!--Object model via hidden iframe-->
+    <iframe id="koi_obj" src="koi.obj" style="display: none;"></iframe>
+    <!--end object model-->
+
     <p align="center">
         <br>
         <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
+        <script src="scripts/loadobj.js"></script>
         <script src="scripts/fullscreen.js"></script>
     </p>
 
