Added navigation, white space, line breaks

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <p><a href='https://www.linkedin.com/in/nolann/'>LinkedIn</a> |
       <a href='https://github.com/NolanNicholson/'>GitHub</a>
+    </p>
       
     <p>
     Hello! I'm Nolan, an engineer living in Reno, NV.
@@ -32,11 +33,12 @@
     and foreign languages - particularly Chinese and Japanese. (English is
     my first.)
     </p>
-    
-    <p>
-    I am hoping to add more content to this website soon!
-    </p>
 
+    <br><hr>
+
+    <p>
+    <a href="fullscreen.html">Fullscreen App Test</a>
+    </p>
 
   </body>
 </html>
