--- a/fullscreen.html
+++ b/fullscreen.html
@@ -23,6 +23,14 @@
         <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
         <script src="scripts/loadobj.js"></script>
         <script src="scripts/fullscreen.js"></script>
+        <br>
+        <br>
+    </p>
+    
+    <hr>
+
+    <p>
+        <a href="index.html">Home</a>
     </p>
 
 
