Added 'animation test' page as duplicate of 'fullscreen test' page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <br><hr>
 
     <p>
-    <a href="fullscreen.html">Fullscreen App Test</a>
+    <ul>
+        <li><a href="fullscreen.html">Fullscreen App Test</a></li>
+        <li><a href="animation.html">Rigging/Animation Test</a></li>
+    </ul>
     </p>
 
   </body>
