Added animation (still quite skew-y; would like to make it feel more solid later

--- a/animation.html
+++ b/animation.html
@@ -5,7 +5,7 @@
   <head>
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
     <link rel='stylesheet' type='text/css' href='stylin.css'>
-    <title>Fullscreen App Test</title>
+    <title>Animation App Test</title>
   </head>
   <body>
     <h1 class='name'>
@@ -22,7 +22,7 @@
         <br>
         <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
         <script src="scripts/loadobj.js"></script>
-        <script src="scripts/fullscreen.js"></script>
+        <script src="scripts/animation.js"></script>
         <br>
         <br>
     </p>
