Added second sine function to animation to make it more customizable and look more natural

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>
     <ul>
         <li><a href="fullscreen.html">Fullscreen App Test</a></li>
-        <li><a href="animation.html">Rigging/Animation Test</a></li>
+        <li><a href="animation.html">Animation Test</a></li>
     </ul>
     </p>
 
