Added koi_pond files as copies of animation test page; will subsequently develop

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 
     <p>
     <ul>
-        <li><a href="fullscreen.html">Fullscreen App Test</a></li>
-        <li><a href="animation.html">Animation Test</a></li>
+        <li>
+            2019-03-19 - <a href="animation.html">Animation Test</a>
+        </li>
+        <li>
+            2019-03-17 - <a href="fullscreen.html">Fullscreen App Test</a>
+        </li>
     </ul>
     </p>
 
