Separated modelView matrix into model and view matrices. Color is a static random pattern again, but is now clustered around a dominant hue

--- a/koi_pond.html
+++ b/koi_pond.html
@@ -5,7 +5,7 @@
   <head>
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
     <link rel='stylesheet' type='text/css' href='stylin.css'>
-    <title>A Koi Pond</title>
+    <title>Koi Pond</title>
   </head>
   <body>
     <h1 class='name'>
