Added link to koi pond on homepage. Made a Fish object that owns its own color buffer. There are now multiple fish.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <p>
     <ul>
         <li>
+            2019-03-30 - <a href="koi_pond.html">A Pond of Koi</a>
+        </li>
+        <li>
             2019-03-19 - <a href="animation.html">Animation Test</a>
         </li>
         <li>
