Renamed 'koi_pond' to 'koipond'

--- a/koipond.html
+++ b/koipond.html
@@ -22,7 +22,7 @@
         <br>
         <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
         <script src="scripts/loadobj.js"></script>
-        <script src="scripts/koi_pond.js"></script>
+        <script src="scripts/koipond.js"></script>
         <br>
         <br>
     </p>
