--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>
     <ul>
         <li>
-            2019-03-30 - <a href="koi_pond.html">A Pond of Koi</a>
+            2019-03-30 - <a href="koipond.html">A Pond of Koi</a>
         </li>
         <li>
             2019-03-19 - <a href="animation.html">Animation Test</a>
