--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>
     Hello! I'm Nolan, an engineer living in Reno, NV.
     I work for <a href='http://originmaterials.com/'>Origin Materials</a>,
-    a chemical R&D and manufacturing startup in West Sacramento.
+    a chemical R&amp;D and manufacturing startup in West Sacramento.
     </p>
 
     <p>
@@ -38,6 +38,9 @@
 
     <p>
     <ul>
+        <li>
+            2019-08-19 - <a href="codesnippets.html">Static Code Snippets</a>
+        </li>
         <li>
             2019-03-30 - <a href="koipond.html">A Pond of Koi</a>
         </li>
