fullscreen.html now generated using templating

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<meta charset = "UTF-8">
-
 <html>
-  <head>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Home - Nolan Nicholson</title>
+    <link rel="stylesheet" type="text/css" href="highlighting.css">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
-    <link rel='stylesheet' type='text/css' href='stylin.css'>
-    <title>Fullscreen App Test</title>
-  </head>
-  <body>
+    <link rel="stylesheet" type="text/css" href="stylin.css">
+</head>
+
+<body>
     <h1 class='name'>
         Nolan Nicholson
         
@@ -18,9 +20,12 @@
         <!--end spinning cube code-->
     </h1>
 
+    
+
     <p align="center">
         <br>
-        <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
+        <canvas id="maincanvas"
+            style="object-fit: fill; width: 640px; height: 480px;"></canvas>
         <script src="scripts/loadobj.js"></script>
         <script src="scripts/fullscreen.js"></script>
         <br>
@@ -34,5 +39,6 @@
     </p>
 
 
-  </body>
+
+</body>
 </html>
