--- a/base.html
+++ b/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Koi Pond - Nolan Nicholson</title>
+    <title>Nolan Nicholson</title>
     <link rel="stylesheet" type="text/css" href="highlighting.css">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
     <link rel="stylesheet" type="text/css" href="stylin.css">
@@ -21,23 +21,7 @@
     </h1>
 
     
-
-    <p align="center">
-        <br>
-        <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
-        <script src="scripts/loadobj.js"></script>
-        <script src="scripts/koipond.js"></script>
-        <br>
-        <br>
-    </p>
     
-    <hr>
-
-    <p>
-        <a href="index.html">Home</a>
-    </p>
-
-
 
 </body>
 </html>
