Added page: Static Page Rendering

--- a/codesnippets.html
+++ b/codesnippets.html
@@ -85,7 +85,8 @@ std::cout &lt;&lt; "Hello World" &lt;&lt; std::endl;
     of the opposite: even for small static websites, it probably makes more sense to handle things
     like code inclusion and highlighting (as well as things like using the same header and
     footer across different pages) by using a templating engine (or some other tool that
-    assembles the HTML for you.)
+    assembles the HTML for you.) That is the subject of
+    <a href="pagerendering.html">this page</a>.
     </p>
 
 
