--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <p>
     <ul>
         <li>
+            2019-08-25 - <a href="pagerendering.html">Static Website Compilation</a>
+        </li>
+        <li>
             2019-08-19 - <a href="codesnippets.html">Static Code Snippets</a>
         </li>
         <li>
