--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 class='name'>
-        Nolan Nicholson
+        <a href="index.html">Nolan Nicholson</a>
         
         <!--Code for adding a spinning cube to the header-->
         <canvas id="headercanvas" width="64" height="64"></canvas>
