--- a/pagerendering.html
+++ b/pagerendering.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Static Website Compilation - Nolan Nicholson</title>
-    <link rel="stylesheet" type="text/css" href="highlighting.css">
+    <link rel="stylesheet" type="text/css" href="styles/highlighting.css">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
-    <link rel="stylesheet" type="text/css" href="stylin.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body>
