--- a/gameoflife.html
+++ b/gameoflife.html
@@ -24,6 +24,7 @@
 
 <p>
 <button id="btn-pauseplay">Start</button>
+<button id="btn-step">Step</button>
 <button id="btn-randomize">Randomize</button>
 </p>
 
