--- a/gameoflife.html
+++ b/gameoflife.html
@@ -26,6 +26,7 @@
 <button id="btn-pauseplay">Start</button>
 <button id="btn-step">Step</button>
 <button id="btn-randomize">Randomize</button>
+<button id="btn-clear">Clear</button>
 </p>
 
 <table id="gol-table"></table>
