--- a/gameoflife.html
+++ b/gameoflife.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146424119-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-146424119-1');
+    </script>
+
     <meta charset="UTF-8">
     <title>Game of Life - Nolan Nicholson</title>
     <link rel="stylesheet" type="text/css" href="styles/highlighting.css">
