--- a/pagerendering.html
+++ b/pagerendering.html
@@ -13,6 +13,7 @@
     </script>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Static Website Compilation - Nolan Nicholson</title>
     <link rel="stylesheet" type="text/css" href="styles/highlighting.css">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
