--- a/gameoflife.html
+++ b/gameoflife.html
@@ -25,7 +25,9 @@
         <a href="index.html">Nolan Nicholson</a>
         
         <!--Code for adding a spinning cube to the header-->
-        <canvas id="headercanvas" width="64" height="64"></canvas>
+        <div id="headercanvas-holder">
+            <canvas id="headercanvas" width="64" height="64"></canvas>
+        </div>
         <script src="scripts/libraries/gl-matrix.js"></script>
         <script src="scripts/headercube.js"></script>
         <!--end spinning cube code-->
