move grouped links to their own div, centered on mobile

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     </div>
     
 
-    <p><a href='https://www.linkedin.com/in/nolann/'>LinkedIn</a> |
-      <a href='https://github.com/NolanNicholson/'>GitHub</a>
+    <p class="grouped-links">
+    <a href='https://www.linkedin.com/in/nolann/'>LinkedIn</a> |
+    <a href='https://github.com/NolanNicholson/'>GitHub</a>
     </p>
       
     <p>
