--- a/koipond.html
+++ b/koipond.html
@@ -27,7 +27,7 @@
             
             <!--Code for adding a spinning cube to the header-->
             <div id="headercanvas-holder">
-                <canvas id="headercanvas" width="64" height="64"></canvas>
+                <canvas id="headercanvas"></canvas>
             </div>
             <script src="scripts/libraries/gl-matrix.js"></script>
             <script src="scripts/headercube.js"></script>
