port over WIP latency article

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     <p>
     <ul>
         <li>
+            2019-11-24 - <a href="latency.html">Exploring "Negative Latency"</a>
+        </li>
+        <li>
             2019-11-10 - <a href="clock.html">Desktop Clock</a>
         </li>
         <li>
