--- a/latency.html
+++ b/latency.html
@@ -102,8 +102,8 @@ I thought the best way to try out some of these techniques
 would be through experimenting on an actual game - something
 simple, but with gameplay precise enough that any latency
 would be nice and frustrating.
-What I settled on was, let's say, unoriginal.
-I give you the new old smash hit, "Flapping Bird":
+The result was, let's say, unoriginal.
+I give you the new smash hit, "Flapping Bird":
 </p>
 
 <div class="game-container">
