packet cache ready but not working for speculative demo

--- a/latency.html
+++ b/latency.html
@@ -338,7 +338,7 @@ Instead of assuming the user can press the button every
 single frame, let's assume they could only have pressed it once during
 our lag period. That way, we only have to handle <i>N</i> cases: one
 for if they didn't click recently, one for if they clicked at this
-frame, one for if they clicked at previous frame, and so on.
+frame, one for if they clicked at the previous frame, and so on.
 </p>
 
 <!--TODO: Discuss Id Software patent -->
