--- a/pagerendering.html
+++ b/pagerendering.html
@@ -109,7 +109,7 @@
     <span class="c1"># Render individual pages (but not the base template)</span>
     <span class="k">for</span> <span class="n">filename</span> <span class="ow">in</span> <span class="n">os</span><span class="o">.</span><span class="n">listdir</span><span class="p">(</span><span class="s1">&#39;templates&#39;</span><span class="p">):</span>
         <span class="k">if</span> <span class="s1">&#39;.html&#39;</span> <span class="ow">in</span> <span class="n">filename</span> <span class="ow">and</span> <span class="n">filename</span> <span class="o">!=</span> <span class="s1">&#39;base.html&#39;</span><span class="p">:</span>
-            <span class="k">print</span><span class="p">(</span><span class="s2">&quot;Compiling template {}...&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">filename</span><span class="p">))</span>
+            <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Compiling template </span><span class="si">{}</span><span class="s2">...&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">filename</span><span class="p">))</span>
 
             <span class="c1"># Link back home (for pages other than index.html)</span>
             <span class="n">link_home</span> <span class="o">=</span> <span class="n">filename</span> <span class="o">!=</span> <span class="s1">&#39;index.html&#39;</span>
@@ -260,7 +260,7 @@
     <span class="c1"># Render individual pages (but not the base template)</span>
     <span class="k">for</span> <span class="n">filename</span> <span class="ow">in</span> <span class="n">os</span><span class="o">.</span><span class="n">listdir</span><span class="p">(</span><span class="s1">&#39;templates&#39;</span><span class="p">):</span>
         <span class="k">if</span> <span class="s1">&#39;.html&#39;</span> <span class="ow">in</span> <span class="n">filename</span> <span class="ow">and</span> <span class="n">filename</span> <span class="o">!=</span> <span class="s1">&#39;base.html&#39;</span><span class="p">:</span>
-            <span class="k">print</span><span class="p">(</span><span class="s2">&quot;Compiling template {}...&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">filename</span><span class="p">))</span>
+            <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Compiling template </span><span class="si">{}</span><span class="s2">...&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">filename</span><span class="p">))</span>
 
             <span class="c1"># Link back home (for pages other than index.html)</span>
             <span class="n">link_home</span> <span class="o">=</span> <span class="n">filename</span> <span class="o">!=</span> <span class="s1">&#39;index.html&#39;</span>
