--- a/latency.html
+++ b/latency.html
@@ -219,7 +219,7 @@ Dwedit
             implemented a method called Run-Ahead</a> for the
 RetroArch retro game emulator, and people have speculated
 that Stadia may be attempting something similar.
-Run-Ahead basically basically works like this:
+Run-Ahead basically works like this:
 </p>
 
 <ol>
