warning about framerates

--- a/latency.html
+++ b/latency.html
@@ -104,6 +104,12 @@ My results, at least so far, pointed less to any perfect
 sort of work.
 </p>
 
+<p>
+Disclaimer: this article was set up on a 60 fps display and may
+not work properly at different framerates. I hope to fix this
+in a future update.
+</p>
+
 <h3>First, a game</h3>
 <p>
 I thought the best way to test these techniques
