--- a/_posts/2019-11-10-desktop-clock.html
+++ b/_posts/2019-11-10-desktop-clock.html
@@ -1,8 +1,6 @@
-{% extends "base.html" %}
-{% block title %}Nolan Nicholson{% endblock %}
-
-{% block page_content %}
-
+---
+title: Desktop Clock
+---
 <div id="clock">
     <div id="clock-container-outer">
         <div id="clock-container-inner">
@@ -15,7 +13,5 @@
     </div>
 </div>
 
-<script src="scripts/clock.js"></script>
-<link rel="stylesheet" type="text/css" href="styles/clock.css">
-
-{% endblock %}
+<script src="/assets/js/clock.js"></script>
+<link rel="stylesheet" type="text/css" href="/assets/css/clock.css">
