--- a/_posts/2020-04-12-stockblaster.html
+++ b/_posts/2020-04-12-stockblaster.html
@@ -1,7 +1,10 @@
+---
+title: "Game: STOCKBLASTER"
+layout: none
+---
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>STOCK BLASTER</title>
         <style>
             body {
                 margin: 0;
@@ -18,6 +21,6 @@
     </head>
     <body>
         <canvas id="c"></canvas>
-        <script src="game.js"></script>
+        <script src="/assets/js/stockblaster.js"></script>
     </body>
 </html>
