typo in stockblaster redirect link

--- a/_posts/2020-04-12-stockblaster.html
+++ b/_posts/2020-04-12-stockblaster.html
@@ -1,7 +1,7 @@
 ---
 title: "Game: STOCKBLASTER"
 layout: none
-redirect_from: /stock_blaster/index.html
+redirect_from: /stockblaster/index.html
 ---
 <html>
     <head>
