updates to index pg

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@ title: Home
 ---
 
 <p>
-Hello! I'm Nolan, a software developer. I work for Everi Games, at a casino gaming studio in Reno, NV.
+<a href="https://twitter.com/nolannicholson">Twitter</a> |
+<a href="https://github.com/nolannicholson">GitHub</a>
 </p>
+<hr>
 
 <p>
-I like computer programming, computer graphics, reading, and languages - particularly Chinese and Japanese.
+Hello! I'm Nolan Nicholson, a software developer in Reno, NV.
 </p>
 
 <h2>Posts</h2>
@@ -25,3 +27,5 @@ I like computer programming, computer graphics, reading, and languages - particu
     </tr>
     {% endfor %}
 </table>
+
+<br>
