post template with title

--- a/_posts/2019-08-19-static-code-snippets.html
+++ b/_posts/2019-08-19-static-code-snippets.html
@@ -1,9 +1,7 @@
 ---
-title: Static Code Snippets
+title: Rendering Code Snippets on a Static Website
 ---
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
-
-    <h2>Rendering Code Snippets on a Static Website</h2>
 
     <p>
     Rendering code in a pleasing format on a webpage - including bells and whistles
