--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@ Hello! I'm Nolan Nicholson, a software developer in Reno, NV.
             {{ post.date | date_to_string }} - 
         </td>
         <td>
+            {% if post.thing_url %}
+            <a href="{{ post.thing_url }}">{{ post.title }}</a>
+            (<a href="{{ post.url }}">About</a>)
+            {% else %}
             <a href="{{ post.url }}">{{ post.title }}</a>
+            {% endif %}
         </td>
     </tr>
     {% endfor %}
