smaller headers on posts than on index page

--- a/_demos/game-of-life.html
+++ b/_demos/game-of-life.html
@@ -1,10 +1,8 @@
 ---
-layout: default
-title: Game of Life
+layout: post
+title: Conway's Game of Life
 post_url: /2019/09/29/game-of-life.html
 ---
-<h2> Conway's Game of Life</h1>
-
 <p>
 This is an implementation of
 <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">
