--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@ layout: default
 title: Home
 ---
 
+<div id='name-banner'>
+    <h1 class='name name-big'>
+        <a href="/">Nolan Nicholson</a>
+        
+        <!--Code for adding a spinning cube to the header-->
+        <div id="headercanvas-holder">
+            <canvas id="headercanvas"></canvas>
+        </div>
+        <script src="/assets/js/libraries/gl-matrix.js"></script>
+        <script src="/assets/js/headercube.js"></script>
+        <!--end spinning cube code-->
+    </h1>
+</div>
+
 <p>
 <a href="https://twitter.com/nolannicholson">Twitter</a> |
 <a href="https://github.com/nolannicholson">GitHub</a>
