--- a/_posts/2019-03-17-fullscreen-app-test.html
+++ b/_posts/2019-03-17-fullscreen-app-test.html
@@ -1,14 +1,5 @@
 ---
-layout: default
-title: Fullscreen App Test
 ---
-
-<p align="center">
-    <br>
-    <canvas id="maincanvas"
-        style="object-fit: fill; width: 640px; height: 480px;"></canvas>
-    <script src="/assets/js/loadobj.js"></script>
-    <script src="/assets/js/fullscreen.js"></script>
-    <br>
-    <br>
-</p>
+{% include democanvas.html %}
+<script src="/assets/js/loadobj.js"></script>
+<script src="/assets/js/fullscreen.js"></script>
