--- a/_posts/2019-03-19-animation-test.html
+++ b/_posts/2019-03-19-animation-test.html
@@ -1,11 +1,5 @@
 ---
 ---
-
-<p align="center">
-    <br>
-    <canvas id="maincanvas" style="object-fit: fill; width: 640px; height: 480px;"></canvas>
-    <script src="/assets/js/loadobj.js"></script>
-    <script src="/assets/js/animation.js"></script>
-    <br>
-    <br>
-</p>
+{% include democanvas.html %}
+<script src="/assets/js/loadobj.js"></script>
+<script src="/assets/js/animation.js"></script>
