tweaks: bosco article + clock header

--- a/_posts/2019-11-10-desktop-clock.html
+++ b/_posts/2019-11-10-desktop-clock.html
@@ -2,6 +2,7 @@
 layout: default
 title: Desktop Clock
 ---
+{% include header.html %}
 <div id="clock">
     <div id="clock-container-outer">
         <div id="clock-container-inner">
